object-configure/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: image-tool-s3-obc
  name: image-tool-s3-obc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: image-tool-s3-obc
  strategy: {}
  template:
    metadata:
      labels:
        app: image-tool-s3-obc
    spec:
      containers:
      - name: image-tool-s3-obc
        image: quay.io/redhattraining/image-tool:latest
        ports:
        - containerPort: 5000
        resources: {}
#        env:
#          - name: CHANGE_ME
#            value: CHANGE_ME
#        envFrom:
#        - configMapRef:
#            name: CHANGE_ME
#        - secretRef:
#            name: CHANGE_ME
      securityContext: {}
      serviceAccount: image-tool
      serviceAccountName: image-tool
