object-configure/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: image-tool-s3-obc
  name: image-tool-s3-obc
spec:
  ports:
  - name: image-tool-s3-obc
    port: 80
    protocol: TCP
    targetPort: 5000
  selector:
    app: image-tool-s3-obc
  type: LoadBalancer
status:
  loadBalancer: {}
