object-configure/route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: image-tool-s3-obc
  name: image-tool-s3-obc
spec:
  tls:
    termination: edge
  to:
    kind: Service
    name: image-tool-s3-obc
    weight: null
